--- a/Artifact2.html
+++ b/Artifact2.html
@@ -38,7 +38,7 @@
     text-align: left;
     padding: 20px;
     height: 200px;
-    width: 1000px;
+    width: 100%;
   }
   .narrativeDiv{
     text-align: left;
