--- a/Artifact2.html
+++ b/Artifact2.html
@@ -36,7 +36,7 @@
     top: 250px;
     z-index: 2;
     text-align: left;
-    padding: 20px;
+    padding: 10px;
     height: 200px;
     width: 100%;
   }
@@ -44,7 +44,7 @@
     text-align: left;
     align-items: normal;
     position: absolute;
-    top: 475;
+    top: 415;
     z-index: 1;
     display: flex;
     background-color: #CDFCFE;
@@ -92,14 +92,14 @@
     <div class="linksDiv">
       
       <div>
-      <H2>Artifact 2 repository files&emsp;
+      <H2>Artifact 2 core file&emsp;
       <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Updated.hpp"> updated version</a>
          &ensp;|&ensp; 
       <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a>
       </H2></div>
 
       <div>
-      <H2>support files&emsp;
+      <H2>Artifact 2 peripheral files&emsp;
       <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/Artifact2BinarySearchTree.hpp">Binary Search Tree file</a>
       &ensp;|&ensp;
       <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/Artifact2main.cpp">main file</a>
