--- a/Artifact2.html
+++ b/Artifact2.html
@@ -31,7 +31,7 @@
     display: flex;
     background-color: #CDFCFE;
     position: absolute;
-    justify-content: space-around;
+    justify-content: flex-start;
     
     top: 250px;
     z-index: 2;
