--- a/Artifact2.html
+++ b/Artifact2.html
@@ -44,7 +44,7 @@
     text-align: left;
     align-items: normal;
     position: absolute;
-    top: 415;
+    top: 400;
     z-index: 1;
     display: flex;
     background-color: #CDFCFE;
@@ -97,6 +97,7 @@
          &ensp;|&ensp; 
       <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a>
       </H2></div>
+      <div>&emsp;&esmp:&emsp;&emsp; &emsp;</div>
 
       <div>
       <H2>Artifact 2 peripheral files&emsp;
