--- a/Artifact2.html
+++ b/Artifact2.html
@@ -77,7 +77,7 @@
 
 <body>
   <div class= "headerDiv">
-    <H2>Algorithms & Data Structures Artifact (Artifact 2)&nbsp;&nbsp;</H2>
+    <H2>Artifact 2: Algorithms & Data Structures Artifact&nbsp;&nbsp;</H2>
   </div>
   <div class="dividerDiv">
     <H2><a href= "index.html"> ePortfolio Home </a>
@@ -97,7 +97,7 @@
          &ensp;|&ensp; 
       <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a>
       </H2></div>
-      <div>&emsp;&esmp:&emsp;&emsp; &emsp;</div>
+      <div>&emsp;&emsp:&emsp;&emsp; &emsp;</div>
 
       <div>
       <H2>Artifact 2 peripheral files&emsp;
