--- a/Artifact2.html
+++ b/Artifact2.html
@@ -97,7 +97,7 @@
          &ensp;|&ensp; 
       <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/menuFunctionsArtifact2Original.hpp"> original version</a>
       </H2></div>
-      <div>&emsp;&emsp:&emsp;&emsp; &emsp;</div>
+      <div>&emsp;&emsp;&emsp;&emsp; &emsp;</div>
 
       <div>
       <H2>Artifact 2 peripheral files&emsp;
