--- a/Artifact3.html
+++ b/Artifact3.html
@@ -31,7 +31,7 @@
     display: flex;
     background-color: #CDFCFE;
     position: absolute;
-    justify-content: space-around;
+    justify-content: flex-start;
    
     top: 250px;
     z-index: 2;
@@ -97,6 +97,7 @@
          &ensp;|&ensp; 
         <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/DashboardArtifact3Original.ipynb"> original version</a>
         </H2></div>
+        <div>&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp; </div>
         
         <div>
          <H2>Artifact 3 peripheral file &emsp;
