--- a/Artifact1.html
+++ b/Artifact1.html
@@ -75,7 +75,7 @@
 
 <body>
   <div class= "headerDiv">
-    <H2>Software Design & Engineering Artifact (Artifact 1)&nbsp;&nbsp;</H2>
+    <H2>Artifact 1: Software Design & Engineering Artifact&nbsp;&nbsp;</H2>
   </div>
   <div class="dividerDiv">
     <H2><a href= "index.html"> ePortfolio Home </a> 
