--- a/Artifact3.html
+++ b/Artifact3.html
@@ -77,7 +77,7 @@
 
 <body>
   <div class= "headerDiv">
-    <H2>Databases (Artifact 3)</H2>
+    <H2>Artifact 3: Databases</H2>
   </div>
   <div class="dividerDiv">
     <H2><a href= "index.html"> ePortfolio Home </a>
