--- a/Artifact2.html
+++ b/Artifact2.html
@@ -77,7 +77,7 @@
 
 <body>
   <div class= "headerDiv">
-    <H2>Artifact 2: Algorithms & Data Structures Artifact&nbsp;&nbsp;</H2>
+    <H2>Artifact 2: Algorithms & Data Structures</H2>
   </div>
   <div class="dividerDiv">
     <H2><a href= "index.html"> ePortfolio Home </a>
