--- a/Artifact2.html
+++ b/Artifact2.html
@@ -38,7 +38,7 @@
     text-align: left;
     padding: 10px;
     height: 100px;
-    width: 100%;
+    width: 1200px;
   }
   .narrativeDiv{
     text-align: left;
