--- a/Artifact1.html
+++ b/Artifact1.html
@@ -89,7 +89,7 @@
   <div class= "bodyDiv">
 
     <div class="linksDiv">
-    <H2>Artifact 1 repository files&emsp;
+    <H2>Artifact 1 core file&emsp;
     <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1UPDATED.c" >updated version</a>
      &ensp;|&ensp; 
     <a href="https://github.com/Christopher101010101010101010/Christopher101010101010101010.github.io/blob/main/gpiointerruptARTIFACT1ORIGINAL.c" >original version</a></H2>
