--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <body>
 <div class= "headerDiv">
   <div class= "headerTxtDiv">
-      <H1>Christopher Anderson ePortfolio</H1>
+      <H1>Christopher Anderson's ePortfolio</H1>
   </div>
 </div>
 <div class="dividerDiv">
